--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,12 +8,14 @@ ja:
       sign_in: 'ログイン'
       sign_out: 'ログアウト'
       masthead:
-        text: 'あなたのフォロワーから、新しいパートナーを見付けよう。'
+        text: 'あなたのフォロワーから、新しいつながりを見付けよう。'
         button: '無料で始める'
       download:
-        title: '新しいパートナーは、フォロワーの中にいます。'
+        title: '新しいつながりは、フォロワーの中にあります。'
         text_html: |
-          あなたが探しているのは、新しいビジネスパートナーですか？ それとも趣味友達ですか？ どちらも、あなたのフォロワーの中に既にいます！
+          あなたが探しているのは、新しいビジネスパートナーですか？ それとも趣味友達ですか？<br>
+          <br>
+          どちらも、あなたのフォロワーの中に既にいます！
           フォロワーを検索して、新しい仲間と新しい関係を築きましょう。
         features:
           what_app_can_do: '%{app} で出来ること'
