--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,6 +17,7 @@ ja:
           <br>
           どちらも、あなたのフォロワーの中に既にいます！
           フォロワーを検索して、新しい仲間と新しい関係を築きましょう。
+          text2: '職種、場所、URL、キーワードで簡単にフォロワーを検索できます。'
         features:
           what_app_can_do: '%{app} で出来ること'
           job: '機能1：フォロワーを「職種」で検索する'
@@ -27,6 +28,7 @@ ja:
         title: 'フォロワーとは、すぐに仲良くなれます。'
         text_html: |
           フォロワーは、もっとあなたのことを知りたくてあなたをフォローしています。あなたがフォロワーに興味を持てば、すぐに仲良くなることができます。
+        text2: 'フォロワーの検索だけでなく、フォロー、片思いフォロー、片思いフォロワーを対象に検索することもできます。'
         features:
           what_app_can_do: '%{app} で出来ること'
           job: '機能1：フォロワーを「職種」で検索する'
