Handle no_user_matches error in InsightImplementation

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,23 +18,11 @@ ja:
           どちらも、あなたのフォロワーの中に既にいます！
           フォロワーを検索して、新しい仲間と新しい関係を築きましょう。
         text2: '職種、場所、URL、キーワードで簡単にフォロワーを検索できます。'
-        features:
-          what_app_can_do: '%{app} で出来ること'
-          job: '機能1：フォロワーを「職種」で検索する'
-          location: '機能2：フォロワーを「場所」で検索する'
-          url: '機能3：フォロワーを「URL」で検索する'
-          keyword: '機能4：フォロワーを「キーワード」で検索する'
       download2:
         title: 'フォロワーとは、すぐに仲良くなれます。'
         text_html: |
           フォロワーは、もっとあなたのことを知りたくてあなたをフォローしています。あなたがフォロワーに興味を持てば、すぐに仲良くなることができます。
         text2: 'フォロワーの検索だけでなく、フォロー、片思いフォロー、片思いフォロワーを対象に検索することもできます。'
-        features:
-          what_app_can_do: '%{app} で出来ること'
-          job: '機能1：フォロワーを「職種」で検索する'
-          location: '機能2：フォロワーを「場所」で検索する'
-          url: '機能3：フォロワーを「URL」で検索する'
-          keyword: '機能4：フォロワーを「キーワード」で検索する'
       features:
         title: '%{app} はフォロワーを検索するためのたった1つのツールです'
         text_html:
@@ -128,10 +116,7 @@ ja:
         one_sided_friends: '片思いフォロー'
         one_sided_followers: '片思いフォロワー'
         mutual_friends: '相互フォロー'
-        disabled:
-          one_sided_friends: '片思いフォローの検索は上位のプランを持つユーザー限定です。'
-          one_sided_followers: '片思いフォロワーの検索は上位のプランを持つユーザー限定です。'
-          mutual_friends: '相互フォローの検索は上位のプランを持つユーザー限定です。'
+        disabled_check: '片思いフォロー、片思いフォロワー、相互フォローの検索は上位のプランを持つユーザー限定です。'
         free_help_html: '上位プランを購入済みの場合は、高度なカテゴリー検索を利用できます。<a class="text-primary btn-checkout" href="#">もっと詳しく</a>'
       search_type:
         title: '検索タイプ'
