--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,23 +18,11 @@ en:
           Both are already among your followers!
           Search through your followers and start building new relationships with new friends.
         text2: 'You can easily search your followers by job, location, URL or keyword.'
-        features:
-          what_app_can_do: 'What %{app} can do:'
-          job: 'feature 1: Search followers by "job"'
-          location: 'feature 2: Search followers by "location"'
-          url: 'feature 3: Search followers by "URL"'
-          keyword: 'feature 4: Search followers by "keyword"'
       download2:
         title: 'You can get along with your followers quickly.'
         text_html: |
           Followers are following you because they want to know more about you. If you are interested in your followers, you can quickly become friends with them.
         text2: 'You can search not only followers, but also following, one-sided following or one-sided followers.'
-        features:
-          what_app_can_do: 'What %{app} can do:'
-          job: 'feature 1: Search followers by "job"'
-          location: 'feature 2: Search followers by "location"'
-          url: 'feature 3: Search followers by "URL"'
-          keyword: 'feature 4: Search followers by "keyword"'
       features:
         title: '%{app} is the only tool to search followers'
         text_html:
@@ -130,10 +118,7 @@ en:
         one_sided_friends: 'One-sided following'
         one_sided_followers: 'One-sided followers'
         mutual_friends: 'Mutual following'
-        disabled:
-          one_sided_friends: 'Searching one-sided following is only available for paid users have a higher level plan.'
-          one_sided_followers: 'Searching one-sided followers is only available for paid users have a higher level plan.'
-          mutual_friends: 'Searching mutual following is only available for paid users have a higher level plan.'
+        disabled_check: 'Searching one-sided following, one-sided followers or mutual following is only available for paid users have a higher level plan.'
         free_help_html: 'You can specify advanced category if you have already purchased a higher level plan. <a class="text-primary btn-checkout" href="#">See details</a>'
       search_type:
         title: 'Search type'
