--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,8 +99,8 @@ en:
         If you have waited too long and the analysis is not complete, please contact <a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a>.
   dashboard:
     index:
-      free_plan_note_html: 'You are using the Free Plan. This plan allows you to search the first 5,000 people of your following or followers. You can remove this limit by purchasing Plus Plan. <a href="#" class="btn-checkout">See details</a>'
-      plus_plan_note_html: 'You are using the Plus Plan. This plan allows you to search the first 100,000 people of your following or followers. You can remove this limit by purchasing Pro Plan. <a href="#" class="btn-checkout">See details</a>'
+      free_plan_note_html: 'You are using the <b>Free Plan</b>. This plan allows you to search the first 5,000 people of your following or followers. You can remove this limit by purchasing Plus Plan. <a href="#" class="btn-checkout">See details</a>'
+      plus_plan_note_html: 'You are using the <b>Plus Plan</b>. This plan allows you to search the first 100,000 people of your following or followers. You can remove this limit by purchasing Pro Plan. <a href="#" class="btn-checkout">See details</a>'
     form:
       disabled_search_user:
         alert: 'You can change the user to be searched after purchasing the plan.'
@@ -207,6 +207,8 @@ en:
         %{app} is designed to help you find new connections among your followers.<br>
         <br>
         If you have any questions, please feel free to contact <a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a>.
+      cancel_subscription: 'Cancel a subscription'
+      cancel_subscription_confirmation: 'Do you really want to cancel a subscription?'
       positive: 'Go to top page'
       negative: 'Close'
     sign_out_modal:
