--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,5 @@
 en:
   app_name: 'SearchFollowers'
-  application:
-    checkout_success_message: 'Thank you for purchasing %{name} plan.'
   home:
     index:
       dashboard: 'Dashboard'
@@ -94,6 +92,13 @@ en:
   login:
     index:
       button: 'Sign in with Twitter'
+      top: 'Top'
+  thanks:
+    index:
+      success: 'Thank you for purchasing %{name} plan.'
+      failure: 'You have not purchased any plans yet.'
+      signed_in: 'You have already signed in.'
+      button: 'Next'
       top: 'Top'
   waiting:
     index:
