--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -46,6 +46,14 @@ ja:
       cta:
         title: 'フォロワーはあなたからの連絡を待っています。'
         text: '試しに使ってみる'
+      faq:
+        title: 'FAQ'
+        q1: '%{app} とは何ですか？'
+        a1: '%{app} はフォロワーから新しいつながりを見付けるためのツールです。'
+        q2: '%{app} で何が出来ますか？'
+        a2: 'フォロワーから検索条件にマッチする新しいつながりを見付けることができます。検索には職種、場所、URL、キーワードを使うことが出来ます。'
+        q3: '%{app} に公式アカウントはありますか？'
+        a3_html: '<a style="color: #007bff;" href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a> が公式アカウントです。分からないことはお気軽にご質問ください。'
       contact:
         title_html: '使ってくれて <i class="fas fa-heart"></i> ありがとう！'
         text_html: 'このアプリはリリースされたばかりです。バグは積極的に直していきます。<br>もし分からないことがあれば、お気軽にご連絡ください。'
