--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -179,7 +179,7 @@ ja:
         loading: '読み込み中'
         specify_correct_label_html: '検索する<a class="badge badge-primary label" href="#search-label-anchor" data-target="#search-label-underline">ラベル</a>を選択してください。'
         no_results_found_html:
-          <p class="lead">検索結果が見つかりませんでした。</p>
+          <p class="lead">指定された条件にマッチするユーザーは見付かりませんでした。条件を変えて再度検索してみてください。</p>
           <br>
           %{app} はリリースされたばかりで、積極的にバグ修正を行っています。
           バグの報告や機能追加の要望は、お気軽に <a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a> までご連絡ください。
