--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,7 +180,7 @@ en:
         loading: 'Loading'
         specify_correct_label_html: 'Please specify search <a class="badge badge-primary label" href="#search-label-anchor" data-target="#search-label-underline">label</a>.'
         no_results_found_html:
-          <p class="lead">No search results are found.</p>
+          <p class="lead">There are no users that match the specified conditions. Please change the search conditions and try searching again.</p>
           <br>
           %{app} has only just been released. I will be actively fixing bugs.
           If you have any bug reports or feature requests, please feel free to contact <a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a>.
