--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -56,6 +56,11 @@ ja:
         a2: 'フォロワーから検索条件にマッチする新しいつながりを見付けることができます。検索には職種、場所、URL、キーワードを使うことが出来ます。'
         q3: '%{app} に公式アカウントはありますか？'
         a3_html: '<a style="color: #007bff;" href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a> が公式アカウントです。分からないことはお気軽にご質問ください。'
+        q4: 'フォロワーが何人でも検索できますか？'
+        a4_html: |
+          無料版の場合は、最初の5,000人まで検索できます。<br>
+          Plusプランの場合は、最初の100,000人まで検索できます。<br>
+          Proプランの場合は、最初の1,000,000人まで検索できます。
       contact:
         title_html: '使ってくれて <i class="fas fa-heart"></i> ありがとう！'
         text_html: 'このアプリはリリースされたばかりです。バグは積極的に直していきます。<br>もし分からないことがあれば、お気軽にご連絡ください。'
